# swimps

./: .fossa.yml  .gitignore  CMakeLists.txt  CONTRIBUTING.md  Cargo.toml  LICENSE.md  README.md  build.rs
.devcontainer/: Dockerfile  create-default-build-directories.bash  devcontainer.json
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_suggestion.md
.github/workflows/: codacy-analysis.yml  codecov.yml  codeql-analysis.yml  coverage.yml  main.yml
cmake/: CMakeLists.txt
source/: swimps.c  swimps.cpp
src/: analysis.rs  args.rs  child.rs  main.rs  optimised_trace.rs  parent.rs  raw_trace.rs  tui.rs
src/trace/: mod.rs  optimised_trace.rs  raw_trace.rs
src/trace/optimised/: backtrace.rs  mod.rs  sample.rs  stack_frame.rs  trace.rs
src/trace/raw/: backtrace.rs  mod.rs  sample.rs  trace.rs
src/trace/shared/: instruction_pointer.rs  mod.rs  timestamp.rs
swimps-analysis/: CMakeLists.txt
swimps-analysis/include/: swimps-analysis.h
swimps-analysis/include/swimps-analysis/: swimps-analysis.h
swimps-analysis/source/: swimps-analysis.cpp
swimps-assert/: CMakeLists.txt
swimps-assert/include/: swimps-assert.h
swimps-assert/include/swimps-assert/: swimps-assert.h
swimps-assert/source/: swimps-assert.c  swimps-assert.cpp
swimps-container/: CMakeLists.txt
swimps-container/include/: swimps-container.h
swimps-container/include/swimps-container/: swimps-container.h
swimps-container/source/: swimps-container.cpp
swimps-dwarf/: CMakeLists.txt
swimps-dwarf/include/: swimps-dwarf-debug-raii.h  swimps-dwarf.h
swimps-dwarf/include/swimps-dwarf/: swimps-dwarf-debug-raii.h  swimps-dwarf.h
swimps-dwarf/source/: swimps-dwarf-debug-raii.cpp  swimps-dwarf.cpp
swimps-error/: CMakeLists.txt
swimps-error/include/: swimps-error.h
swimps-error/include/swimps-error/: swimps-error.h
swimps-error/source/: swimps-error.c  swimps-error.cpp
swimps-io/: CMakeLists.txt
swimps-io/include/: swimps-io-file.h  swimps-io.h  swimps-io.impl
swimps-io/include/swimps-io/: swimps-io-file.h  swimps-io.h  swimps-io.impl
swimps-io/source/: swimps-io-file.cpp  swimps-io.c  swimps-io.cpp
swimps-log/: CMakeLists.txt
swimps-log/include/: swimps-log.h
swimps-log/include/swimps-log/: swimps-log.h
swimps-log/source/: swimps-log.c  swimps-log.cpp
swimps-math/include/: swimps-math.h
swimps-option/: CMakeLists.txt
swimps-option/include/: swimps-option-options.h  swimps-option-parser.h  swimps-option.h
swimps-option/include/swimps-option/: swimps-option-options.h  swimps-option-parser.h
swimps-option/source/: swimps-option-options.cpp  swimps-option-parser.cpp  swimps-option.cpp
swimps-preload/: CMakeLists.txt
swimps-preload/include/: swimps-preload.h
swimps-preload/include/swimps-preload/: swimps-preload.h
swimps-preload/include/swimps-preload/private/: sigprof_handler.h
swimps-preload/source/: swimps-preload-backtrace.cpp  swimps-preload-procmaps.cpp  swimps-preload.c  swimps-preload.cpp
swimps-profile/: CMakeLists.txt
swimps-profile/include/: swimps-profile.h
swimps-profile/include/swimps-profile/: swimps-profile.h
swimps-profile/source/: swimps-profile-child.c  swimps-profile-child.cpp  swimps-profile-parent.c  swimps-profile-parent.cpp  swimps-profile.c  swimps-profile.cpp
swimps-test/: CMakeLists.txt
swimps-test/benchmark/: CMakeLists.txt
swimps-test/benchmark/source/: swimps-benchmark-test.cpp
swimps-test/benchmark/swimps-preload-benchmark-test/source/: swimps-sigprof-handler-benchmark.cpp
swimps-test/intergration/: CMakeLists.txt
swimps-test/intergration/source/: swimps-intergration-test.cpp
swimps-test/intergration/swimps-dwarf-intergration-test/data/: cu-test
swimps-test/intergration/swimps-dwarf-intergration-test/source/: dwarf-info-test.cpp
swimps-test/intergration/swimps-io-intergration-test/source/: swimps-io-file.cpp
swimps-test/intergration/swimps-option-intergration-test/source/: swimps-option-stringify.cpp
swimps-test/intergration/swimps-trace-file-intergration-test/source/: swimps-trace-file-backtrace-test.cpp
swimps-test/swimps-io-test/source/: swimps-format-string-test.cpp  swimps-format-string-valist-test.cpp  swimps-write-to-buffer-test.cpp  swimps-write-to-file-descriptor-test.cpp
swimps-test/system/: CMakeLists.txt
swimps-test/system/data/: swimps_trace_swimps-dummy_1289386_91242411
swimps-test/system/source/: swimps-dummy.cpp  swimps-system-test.py
swimps-test/unit/: CMakeLists.txt
swimps-test/unit/source/: swimps-unit-test.cpp
swimps-test/unit/swimps-container-unit-test/source/: span-test.cpp
swimps-test/unit/swimps-io-unit-test/source/: swimps-format-string-test.cpp  swimps-format-string-valist-test.cpp  swimps-read-from-file-descriptor.cpp  swimps-write-to-buffer-test.cpp  swimps-write-to-file-descriptor-test.cpp
swimps-test/unit/swimps-log-unit-test/source/: swimps-format-log-message-test.cpp
swimps-test/unit/swimps-option-unit-test/source/: swimps-parse-command-line.cpp
swimps-test/unit/swimps-trace-file-unit-test/source/: swimps-trace-file-backtrace-test.cpp
swimps-time/: CMakeLists.txt
swimps-time/include/: swimps-time.h
swimps-time/include/swimps-time/: swimps-time.h
swimps-time/source/: swimps-time.c  swimps-time.cpp
swimps-trace/: CMakeLists.txt
swimps-trace-file/: CMakeLists.txt
swimps-trace-file/include/: swimps-trace-file.h
swimps-trace-file/include/swimps-trace-file/: swimps-trace-file.h
swimps-trace-file/source/: swimps-trace-file.c  swimps-trace-file.cpp
swimps-trace/include/: swimps-trace.h
swimps-trace/include/swimps-trace/: swimps-trace.h
swimps-trace/source/: swimps-trace.cpp
swimps-tui/: CMakeLists.txt
swimps-tui/include/: swimps-tui.h
swimps-tui/include/swimps-tui/: swimps-tui.h
swimps-tui/source/: swimps-tui.cpp
