[package]
name = "swimps"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.18", features = ["derive"] }
fork = "0.1.19"
nix = { version = "0.24.1", features = ["process"] }
tui = "0.18.0"
crossterm = "0.23.2"
chrono = "0.4.19"

[build-dependencies]
cmake = "0.1.48"
